--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,6 +7,9 @@
             <button ion-item (click)="openPage(contas)" menuClose>
                Contas
             </button>
+            <button ion-item (click)="openPage(lancamentos)" menuClose>
+                Lancamentos
+             </button>
         </ion-list>
     </ion-content>
 </ion-menu>
