--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,9 @@
             <button ion-item (click)="openPage(lancamentos)" menuClose>
                 Lancamentos
              </button>
+             <button ion-item (click)="openPage(saldo)" menuClose>
+                Saldo
+             </button>
         </ion-list>
     </ion-content>
 </ion-menu>
