--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,7 @@ $colors: (
   dark:       #222
 );
 
-
+$toolbar-background: orange ;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
