--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,13 +35,13 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
+  secondary:  #30e9aa,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
 
-$toolbar-background: orange ;
+$toolbar-background: #30e9aa ;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
